# Psi

./: README.md
Lab1/: CMakeLists.txt  Neuron.cpp  Neuron.hpp  NeuronGrid.cpp  NeuronLayer.cpp  NeuronLayer.h  main.cpp  weights.txt
Lab2/: NeuronGrid.cpp  NeuronGrid.h  NeuronLayer.cpp  NeuronLayer.h  main.cpp
Lab3/: ActivationFunctions.cpp  ActivationFunctions.h  CMakeLists.txt  CoAha  ImageNumberRecognition.ai  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuronGrid.cpp  NeuronGrid.h  NeuronLayer.cpp  NeuronLayer.h  main.cpp
Lab4/: 10000data100neurons50dropOut.ai  1000data40neurons50dropOut.ai  100batching60000data100neurons50dropOut.ai  60000data100neurons50dropOut.ai  ActivationFunctions.cpp  ActivationFunctions.h  CMakeLists.txt  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  TanHSoftMax100batching60000data100neurons50dropOut.ai  main.cpp
Lab5/: CMakeLists.txt  ConvolutionNeuralNetwork.cpp  ConvolutionNeuralNetwork.h  main.cpp
Lab6/: search.py  searchAgents.py
Lab7/: multiAgents.py
Lab8/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  ChromosomePool.cpp  ChromosomePool.h  MyRandom.cpp  MyRandom.h  main.cpp
Lab9/: Pong.py
